--- a/emprestimos/templates/emprestimos/index.html
+++ b/emprestimos/templates/emprestimos/index.html
@@ -38,24 +38,23 @@
         </div>
         <div class="info">
           <i class="bi bi-backpack2"></i>
-          <span>{{emp.aluno}}</span>
+          <span>{{emp.aluno.nome}}</span>
         </div>
         <div class="info">
           <i class="bi bi-person-vcard-fill"></i>
-          <span>{{emp.aluno}}</span>
+          <span>{{emp.aluno.turma}}</span>
         </div>
         <div class="info">
           <i class="bi bi-person-vcard-fill"></i>
           <span>{{data|date:"d/m/Y"}}</span>
         </div>
         <div class="opcoes">
-          <a href="" class="editar"><i class="bi bi-pencil-fill"></i></a>
-          <a href="" class="excluir"><i class="bi bi-trash3-fill"></i></a>
+          <a href="{% url 'conclusao_emprestimo' emp.id %}" class="excluir"><i class="bi bi-check-circle-fill"></i></a>
         </div>
       </div>
       {% empty %}
       <div class="item">
-        <span>Nenhum empréstimo cadastrado... <a href="{% url 'cadastro' %}" class="titulo-laranja" style="font-weight: bold;">Adicionar um novo.</a></span>
+        <span>Nenhum empréstimo cadastrado... <a href="{% url 'novoEmprestimo' %}" class="titulo-laranja" style="font-weight: bold;">Adicionar um novo.</a></span>
       </div>
       {%endfor%}
     </div>
