--- a/livros/templates/base.html
+++ b/livros/templates/base.html
@@ -7,6 +7,7 @@
   {% load static %}
   {% block css %}<link rel="stylesheet" href="{% static './css/style.css' %}">{% endblock %}
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  {% block head %}{% endblock %}
 </head>
 <body>
   {% block header %}
