--- a/emprestimos/templates/emprestimos/cadastro.html
+++ b/emprestimos/templates/emprestimos/cadastro.html
@@ -25,6 +25,7 @@
         <div class="input">
           <i class="bi bi-book"></i>
           {{form.livro}}
+          <a href="{% url 'novo_livro' %}" class="add-alunoBtn"><i class="bi bi-journal-plus add-aluno"></i></a>
         </div>
         <div class="input aluno">
           <i class="bi bi-person-fill"></i>
